Fix the extra padding on the right that was showing up on mobile

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -50,6 +50,7 @@
 
     .innerContainerDiv {
         width: 100%;
+        margin-right: 0;
     }
 
     .headerImage {
